--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assets/js/app.js">
 </head>
 <body>
-  Ola
+  hello
   <script src="assets/js/app.js"></script>
 </body>
 </html>
